Fix timestamps and neuroconv export

--- a/code/check-nwb-file.ipynb
+++ b/code/check-nwb-file.ipynb
@@ -1,1 +1,143 @@
-{"cells":[{"cell_type":"code","execution_count":2,"id":"0814775b-6da1-40b3-a542-20ba65b60039","metadata":{"tags":[]},"outputs":[],"source":"from pathlib import Path\n\nfrom pynwb import NWBHDF5IO\nfrom hdmf_zarr import NWBZarrIO\nfrom nwbwidgets import nwb2widget"},{"cell_type":"code","execution_count":3,"id":"638f7867-21dd-4c6f-b6b3-2d7597e2e680","metadata":{"tags":[]},"outputs":[],"source":"%matplotlib widget"},{"cell_type":"code","execution_count":4,"id":"22f2232f-b624-4bdc-afd6-d730a7893fb2","metadata":{"tags":[]},"outputs":[],"source":"results_path = Path(\"../results/\")"},{"cell_type":"code","execution_count":5,"id":"b20b3ea2-8c2b-4d1f-afd1-3832b4dcac82","metadata":{"tags":[]},"outputs":[],"source":"nwbfile_paths = [p for p in results_path.iterdir() if \".nwb\" in p.suffixes]"},{"cell_type":"code","execution_count":6,"id":"592b5be4-07a2-470f-ab95-9c0a2da6e4c8","metadata":{"tags":[]},"outputs":[],"source":"nwbfile_path = nwbfile_paths[0]"},{"cell_type":"code","execution_count":7,"id":"93f82f8d-39b4-4988-b715-969b64756a19","metadata":{"tags":[]},"outputs":[{"name":"stderr","output_type":"stream","text":["/opt/conda/lib/python3.9/site-packages/pynwb/ecephys.py:90: UserWarning: ElectricalSeries 'ElectricalSeriesProbeB': The second dimension of data does not match the length of electrodes. Your data may be transposed.\n","  warnings.warn(\"%s '%s': The second dimension of data does not match the length of electrodes. \"\n","/opt/conda/lib/python3.9/site-packages/pynwb/ecephys.py:90: UserWarning: ElectricalSeries 'ElectricalSeriesProbeB-LFP': The second dimension of data does not match the length of electrodes. Your data may be transposed.\n","  warnings.warn(\"%s '%s': The second dimension of data does not match the length of electrodes. \"\n"]}],"source":"if nwbfile_path.is_dir():\n    io = NWBZarrIO(str(nwbfile_path), \"r\")\nelse:\n    io = NWBHDF5IO(str(nwbfile_path), \"r\")\nnwbfile = io.read()"},{"cell_type":"code","execution_count":8,"id":"463c1030-455c-4aca-abc4-f262311b1b23","metadata":{"tags":[]},"outputs":[{"data":{"application/vnd.jupyter.widget-view+json":{"model_id":"157b77bdac844bfebf13f56d7f668ce4","version_major":2,"version_minor":0},"text/plain":["VBox(children=(HBox(children=(Label(value='session_description:', layout=Layout(max_height='40px', max_width='…"]},"execution_count":8,"metadata":{},"output_type":"execute_result"}],"source":"nwb2widget(nwbfile)"},{"cell_type":"code","execution_count":13,"id":"2c6b512c-7aab-44b4-b0cf-1d353b0e4e36","metadata":{"tags":[]},"outputs":[{"data":{"text/html":["<table class=\"zarr-info\"><tbody><tr><th style=\"text-align: left\">Name</th><td style=\"text-align: left\">/acquisition/ElectricalSeriesProbeA/data</td></tr><tr><th style=\"text-align: left\">Type</th><td style=\"text-align: left\">zarr.core.Array</td></tr><tr><th style=\"text-align: left\">Data type</th><td style=\"text-align: left\">int16</td></tr><tr><th style=\"text-align: left\">Shape</th><td style=\"text-align: left\">(300000, 384)</td></tr><tr><th style=\"text-align: left\">Chunk shape</th><td style=\"text-align: left\">(78125, 64)</td></tr><tr><th style=\"text-align: left\">Order</th><td style=\"text-align: left\">C</td></tr><tr><th style=\"text-align: left\">Read-only</th><td style=\"text-align: left\">True</td></tr><tr><th style=\"text-align: left\">Compressor</th><td style=\"text-align: left\">WavPack(bps=0, dynamic_noise_shaping=True, level=3, num_decoding_threads=8, num_encoding_threads=1, shaping_weight=0.0)</td></tr><tr><th style=\"text-align: left\">Store type</th><td style=\"text-align: left\">zarr.storage.ConsolidatedMetadataStore</td></tr><tr><th style=\"text-align: left\">Chunk store type</th><td style=\"text-align: left\">zarr.storage.DirectoryStore</td></tr><tr><th style=\"text-align: left\">No. bytes</th><td style=\"text-align: left\">230400000 (219.7M)</td></tr><tr><th style=\"text-align: left\">Chunks initialized</th><td style=\"text-align: left\">24/24</td></tr></tbody></table>"],"text/plain":["Name               : /acquisition/ElectricalSeriesProbeA/data\n","Type               : zarr.core.Array\n","Data type          : int16\n","Shape              : (300000, 384)\n","Chunk shape        : (78125, 64)\n","Order              : C\n","Read-only          : True\n","Compressor         : WavPack(bps=0, dynamic_noise_shaping=True, level=3,\n","                   : num_decoding_threads=8, num_encoding_threads=1,\n","                   : shaping_weight=0.0)\n","Store type         : zarr.storage.ConsolidatedMetadataStore\n","Chunk store type   : zarr.storage.DirectoryStore\n","No. bytes          : 230400000 (219.7M)\n","Chunks initialized : 24/24"]},"execution_count":13,"metadata":{},"output_type":"execute_result"}],"source":"nwbfile.acquisition[\"ElectricalSeriesProbeA\"].data.info"}],"metadata":{"kernelspec":{"display_name":"Python 3 (ipykernel)","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.9.12"}},"nbformat":4,"nbformat_minor":5}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0814775b-6da1-40b3-a542-20ba65b60039",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "from pynwb import NWBHDF5IO\n",
+    "from hdmf_zarr import NWBZarrIO\n",
+    "from nwbwidgets import nwb2widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "638f7867-21dd-4c6f-b6b3-2d7597e2e680",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22f2232f-b624-4bdc-afd6-d730a7893fb2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "results_path = Path(\"../results/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b20b3ea2-8c2b-4d1f-afd1-3832b4dcac82",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nwbfile_paths = [p for p in results_path.iterdir() if \".nwb\" in p.suffixes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "592b5be4-07a2-470f-ab95-9c0a2da6e4c8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nwbfile_path = nwbfile_paths[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f82f8d-39b4-4988-b715-969b64756a19",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "if nwbfile_path.is_dir():\n",
+    "    io = NWBZarrIO(str(nwbfile_path), \"r\")\n",
+    "else:\n",
+    "    io = NWBHDF5IO(str(nwbfile_path), \"r\")\n",
+    "nwbfile = io.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d154f4-b239-48c3-b1a8-56a4d511492d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nwb2widget(nwbfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d7803a5-9b7c-4a3e-98dc-1ce92c781930",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lfpA = nwbfile.processing[\"ecephys\"].data_interfaces[\"LFP\"][\"ElectricalSeriesProbeA-LFP\"]\n",
+    "lfpA.electrodes.to_dataframe()[[\"channel_name\", \"group_name\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7409d03-42ec-43dd-8780-43ebcdcd4bdd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lfpB = nwbfile.processing[\"ecephys\"].data_interfaces[\"LFP\"][\"ElectricalSeriesProbeB-LFP\"]\n",
+    "lfpB.electrodes.to_dataframe()[[\"channel_name\", \"group_name\"]]"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
