--- a/code/check-nwb-file.ipynb
+++ b/code/check-nwb-file.ipynb
@@ -10,10 +10,9 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "\n",
+    "import numpy as np\n",
     "from pynwb import NWBHDF5IO\n",
-    "from hdmf_zarr import NWBZarrIO\n",
-    "from nwbwidgets import nwb2widget"
+    "from hdmf_zarr import NWBZarrIO\n"
    ]
   },
   {
@@ -25,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget"
+    "%matplotlib inline"
    ]
   },
   {
@@ -83,6 +82,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1c582c3-a3b9-4779-b28b-466a123a5c15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nwbfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d93708bb-d349-41ae-9e36-48ddd5e0dace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electrodes = nwbfile.electrodes.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a96034d1-db5b-43a5-a8e4-0c636533f102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electrodes.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b5c4dc-f44d-4ba0-8855-ad6670333809",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electrodes.group[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e0d154f4-b239-48c3-b1a8-56a4d511492d",
    "metadata": {
     "tags": []
@@ -135,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
